<resources>
    <string name="app_name">Wedding</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="iddoc">Pleas Upload any valid ID proof (Aadhar / DL / Voter-ID):-</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \n A few formalities !! :)</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Your Full Name Please</string>
</resources>
