<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:textSize="50sp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/indigo_daisy"
        android:layout_marginTop="60dp"/>

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag"
        android:textSize="17sp"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="50dp"/>

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/your_name"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:inputType="textPersonName"
        android:fontFamily="@font/roboto_regular"
        android:background="@drawable/et_custom"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/e_mail"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:fontFamily="@font/roboto_regular"
        android:inputType="textEmailAddress"
        android:background="@drawable/et_custom"
        android:textSize="15sp" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="2dp"
    android:background="@color/primary_dark"/>
    <TextView
        android:id="@+id/et_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iddoc"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_regular"
        android:textSize="15sp" />

    <View
        android:layout_height="5dp"
        android:layout_width="match_parent"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:background="@drawable/sober_bg"
            android:text="UPLOAD"
            android:layout_height="wrap_content"/>
        <View
            android:layout_width="10dp"
            android:layout_height="1dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="img_12344412.jpg"/>
        <View
            android:layout_width="140dp"
            android:layout_height="1dp"/>

    </LinearLayout>
    <View
        android:layout_width="1dp"
        android:layout_height="3dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/primary_dark"/>
    <TextView
        android:id="@+id/et_flight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please Upload your Flight tickets"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_regular"
        android:textSize="15sp" />

    <View
        android:layout_height="5dp"
        android:layout_width="match_parent"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:background="@drawable/sober_bg"
            android:text="UPLOAD"
            android:layout_height="wrap_content"/>
        <View
            android:layout_width="10dp"
            android:layout_height="1dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="img_12344412.jpg"/>
        <View
            android:layout_width="140dp"
            android:layout_height="1dp"/>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="OR"
        android:textColor="@color/primary_darker"
        android:textStyle="bold"
        android:gravity="center_horizontal"/>
    <View
        android:layout_width="1dp"
        android:layout_height="3dp"/>

    <TextView
        android:id="@+id/et_pnr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please Enter your train PNR"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_regular"
        android:textSize="15sp" />

    <View
        android:layout_height="5dp"
        android:layout_width="match_parent"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Enter your trian PNR"/>

        <View
            android:layout_width="10dp"
            android:layout_height="1dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SUBMIT"/>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_custom"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:layout_centerInParent="true"
            android:textColor="@android:color/white"
            android:text="@string/register"/>





    </RelativeLayout>

</LinearLayout>
</ScrollView>